# fraclib

./: README.md  pyproject.toml
src/fraclib/: __init__.py  __version__.py
src/fraclib/types/: signals.py  tradingsignal.py
